--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Vocab Crusher (Projector)</title>
+  <title>Vocab Crusher </title>
   <style>
     :root{
       --paper:#fbf6dc;
