--- a/Index.html
+++ b/Index.html
@@ -912,9 +912,9 @@ els.clearList.addEventListener("click", clearList);
     function setProjectorButtonLabel(){
       const isProj = document.body.classList.contains("projector");
       if(isProj){
-        els.floatProjectorBtn.textContent = "Projector View";
+        els.floatProjectorBtn.textContent = "Projector Mode: ON / OFF";
       } else {
-        els.floatProjectorBtn.textContent = "Teacher View";
+        els.floatProjectorBtn.textContent = "Projector Mode: ON / OFF";
       }
     }
 
