--- a/Index.html
+++ b/Index.html
@@ -616,7 +616,7 @@
           "Be specific. The stronger and clearer the connection, the better.",
         scoring:
           "1 pt = each clear, accurate connection\n" +
-          "+1 bonus = connect a term beyond the list (real-world example, additional concept, etc.)"
+          "+1 bonus = connect a term/concept beyond the list"
       },
       story: {
         title: "STORY MODE",
