--- a/Index.html
+++ b/Index.html
@@ -483,7 +483,7 @@
 
 <body>
   <button class="floatToggle" id="floatProjectorBtn" title="P = toggle projector">
-    Projector View
+    Projector Mode
   </button>
 
   <button class="helpBtn" id="helpBtn" title="Help">
@@ -505,7 +505,7 @@
       <hr class="helpRule" />
 
       <div class="helpLine"><span class="kbd">Space</span> Smash</div>
-      <div class="helpLine"><span class="kbd">P</span> Toggle Projector View</div>
+      <div class="helpLine"><span class="kbd">P</span> Toggle Projector Mode</div>
       <div class="helpLine"><span class="kbd">S</span> Scoring</div>
 
       <hr class="helpRule" />
