--- a/Index.html
+++ b/Index.html
@@ -572,7 +572,7 @@
           <span class="kbd">Space</span> Smash
           <span class="kbd">S</span> Scoring   
           <span class="shortcut-pair">
-          <span class="kbd">P</span> Toggle Projector View
+          <span class="kbd">P</span> Toggle Projector Mode
           </span>
         </div>
       </div>
