--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Vocab Crusher </title>
+  <title>Vocab Crusher - classroom vocab activity </title>
+  <meta name="description" content="A fast classroom vocabulary warm-up tool. Paste your list, choose a mode, hit SMASH, and have students conect vocabulary terms (with shareable word lists).">
   <style>
     :root{
       --paper:#fbf6dc;
