--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Vocab Crusher - classroom vocab activity </title>
-  <meta name="description" content="A fast classroom vocabulary warm-up tool. Paste your list, choose a mode, hit SMASH, and have students conect vocabulary terms (with shareable word lists).">
-  <style>
+  <meta name="description" content="A fast classroom vocabulary warm-up tool. Paste your list, project, choose a mode, hit SMASH, and spark student connections.">  <style>
     :root{
       --paper:#fbf6dc;
       --gold:#f6c84f;
