--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Vocab Crusher - classroom vocab activity </title>
+  <title>Vocab Crusher - Classroom Vocab Warm-Up Tool </title>
   <meta name="description" content="A fast classroom vocabulary warm-up tool. Paste your list, project, choose a mode, hit SMASH, and spark student connections.">  <style>
     :root{
       --paper:#fbf6dc;
